// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallationTable should match snapshot 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p
    className="is-italic"
  >
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div>
    <p
      key="test"
    >
      Total current installations for 
      <strong>
        test
      </strong>
      : 
      0
    </p>
    <p
      key="asd"
    >
      Total current installations for 
      <strong>
        asd
      </strong>
      : 
      0
    </p>
  </div>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={0}
  />
</div>
`;

exports[`InstallationTable should match with null developerData 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p
    className="is-italic"
  >
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div />
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={0}
  />
</div>
`;

exports[`InstallationTable should match with null installationsAppData 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p
    className="is-italic"
  >
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div>
    <p
      key="test"
    >
      Total current installations for 
      <strong>
        test
      </strong>
      : 
      0
    </p>
    <p
      key="asd"
    >
      Total current installations for 
      <strong>
        asd
      </strong>
      : 
      0
    </p>
  </div>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={0}
  />
</div>
`;
